<resources>
    <string name="app_name">Справочник компонентов ПК</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник по котам и кошкам</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Information</string>
    <string name="exit">Exit</string>

    <string name="menu_home">00. Начало</string>
    <string name="menu_gallery">01. Чем кормить кошку</string>
    <string name="menu_slideshow">02. Почему коты лучше мужчин</string>
    <string name="menu_ram">03. Монеты с котами</string>
    <string name="menu_hdd">04. Этикет котов</string>
    <string name="menu_gpu">05. Как говорит кот</string>
    <string name="menu_bp">06. Устав кота</string>
    <string name="menu_case">07. Законы про котов</string>
    <string name="menu_monitor"> </string>
    <string name="ram">
        Ко́шка (лат. Felis catus) — домашнее животное, одно из наиболее популярных (наряду с собакой) «животных-компаньонов». С точки зрения научной систематики, домашняя кошка — млекопитающее семейства кошачьих отряда хищных. Нередко домашнюю кошку рассматривают как подвид лесной кошки(Felis silvestris)—Felis s. Catu, однако, с точки зрения современной биологической систематики (2017 год), домашняя кошка является отдельным биологическим видом.</string>

    <string name="intr">
        В данной статье я расскажу об основных компонентах типичного домашнего (стационарного) компьютера для того, чтобы вы имели представление как он устроен, как выглядит тот или иной компонент, какие имеет характеристики и за что отвечает. Вся эта информация может пригодиться простым начинающим пользователям при выборе и покупке компьютера… Под «Основными» я имел ввиду те компоненты (комплектующие), которые вынимаются и подлежат простой замене. Проще говоря, я не буду заходить слишком далеко и рассказывать в детальных подробностях, как работает компьютер, объясняя каждый элемент на платах и внутреннее устройство каждого компонента. Данный блог читает очень много новичков, и я считаю, что сразу говорить обо всех сложных процессах и терминах – это не есть хорошо и просто вызовет кашу в голове.</string>
    <string name="cpu">
        Это мозг компьютера. Он является главным компонентом и производит все вычисления в компьютере, контролирует все операции и процессы. Также является одним из самых дорогих компонентов, и цена очень хорошего современного процессора может переваливать за 50 000 рублей.
        Бывают процессоры фирмы Intel и AMD. Тут кому что нравится, а так, Интелы меньше нагреваются, потребляют меньше электроэнергии. При всём этом у AMD лучше идёт обработка графики, т.е. больше подошёл бы для игровых компьютеров и тех, где работа будет вестись с мощными редакторами изображений, 3D графики, видео. На мой взгляд эта разница между процессорами не столь существенна и заметна…
        Основной характеристикой является частота процессора (измеряется в Герцах. Например 2.5GHz), а также – разъём для подключения к материнской плате (сокет. Например, LGA 1150).</string>
    <string name="motherboard">Эта самая большая плата в компьютере, которая является связующим звеном между всеми остальными компонентами. К материнской плате подключаются все остальные устройства, включая периферийные. Производителей материнских плат множество, а на верхушке держатся ASUS и Gigabyte, как самые надёжные и одновременно дорогие, соответственно. Основными характеристиками являются: тип поддерживаемого процессора (сокет), тип поддерживаемой оперативной памяти (DDR2, DDR3, DDR4), форм фактор (определяет в какой корпус вы сможете поместить данную плату), а также – типы разъёмов для подключения остальных компонентов компьютера. Например, современные жесткие диски (HDD) и диски SSD подключаются через разъёмы SATA3, видеоадаптеры – через разъёмы PCI-E x16 3.0.</string>
    <string name="hdd">
        Вот это как раз-таки та память, на которой у вас постоянно хранятся все ваши файлы, куда устанавливаются программы, игры, скачиваются фильмы, музыка и всё прочее. Этот вид памяти не очищается после перезагрузки или выключения компьютера, как в случае с оперативной памятью, т.е. является энергонезависимой.
        Бывают диски HDD и SSD. Последние начали массово использоваться не так-то и давно и постепенно вытесняют HDD за счёт своих неоспоримых преимуществ, главное из которых – скорость записи / считывания данных. У SSD она в 10-ки раз превышает скорость HDD. Помимо этого, SSD диски намного прочнее (поскольку в них отсутствуют движущиеся механизмы как в HDD), потребляют меньше энергии (HDD около 6 Вт, а SSD меньше 2Вт), бесшумны, намного легче по весу, меньше нагреваются.
        Недостаток SSD – высокая стоимость. Например, диск SSD объёмом 120 Гб. может стоить около 6000 рублей, в то время как за эти же деньги можно купить диск HDD объёмом около 2-х терабайт :) Поэтому SSD диск целесообразнее покупать не очень небольшого размера (например, 120 Гб) и использовать его только для хранения операционной системы и установленных программ, а все нужные файлы (документы для работы, фильмы, фотки и прочее) хранить уже на HDD большого размера.
        Ну и второй недостаток – число циклов перезаписи значительно меньше чем у HDD. А это значит, что SSD диски меньше служат. Но прогресс не стоит на месте и со временем эта проблема будет, я думаю, тоже решена.
        Основная характеристика у HDD и SSD – объём для хранения данных. Чем он больше, тем, соответственно, больше вы сможете хранить на компьютере всякого барахла и важных документов :) На данный момент объёмы и тех, и других примерно уравниваются. Объёмы HDD для домашних компьютеров достигают уже 10 Тб. (терабайт). 10 Тб = 10 000 Гб. Это просто огромное пространство для хранения данных! Также не менее важной характеристикой для SDD является скорость записи / считывания. Чем она больше, тем лучше и хорошо если будет в районе 500 Мб/cек. Для HDD похожий параметр – скорость вращения шпинделя. Здесь вполне подойдут диски со скоростью 7200 оборотов в минуту.</string>
    <string name="gpu">
        Это устройство отвечает за формирование и вывод изображения на экран монитора или любого другого аналогичного подключенного устройства. Видеокарты бывают встроенными (интегрированными) и внешними (дискретными). Встроенная видеокарта на сегодняшний день имеется в подавляющем большинстве материнских плат и визуально мы видим лишь её выход – разъём для подключения монитора. Внешняя видеокарта подключается к плате отдельно в виде ещё одной платы со своей системой охлаждения (радиатор или вентилятор).
        Какая разница между ними, спросите вы? Разница в том, что встроенная видеокарта не предназначена для запуска ресурсоёмких игр, работы в профессиональных редакторах изображения и видео. Ей просто не хватит мощности для обработки такой графики и всё будет сильно тормозить. Встроенная видюха на сегодняшний день может использоваться скорее как запасной временный вариант. Для всего остального нужна хоть какая-то простенькая внешняя видеокарта и какая именно уже зависит от предпочтений пользования компьютером: для интернет-сёрфинга, работы с документами или же для игр.
        Основной характеристикой видеокарты является: разъём для подключения к плате, частота графического процессора (чем она больше, тем лучше), объём и тип видеопамяти, разрядность шины видеопамяти.</string>
    <string name="bp">Очень важный компонент компьютера. Он подключается к электросети и служит для снабжения постоянным током всех других компонентов компьютера, преобразуя сетевое напряжения до требуемых значений. А устройства компьютера работают на напряжениях: +3.3В, +5В, +12В. Отрицательные напряжения практически не используются. Основной характеристикой блока питания является его мощность и измеряется, соответственно, в Ваттах. В компьютер ставится блок питания с такой мощностью, чтобы её хватило для питания всех компонентов компьютера. Больше всего будет потреблять видеоадаптер (потребляемая им мощность будет обязательно указана в документации), поэтому ориентироваться нужно на него и брать просто с небольшим запасом. Также блок питания должен иметь все необходимые разъёмы для подключения ко всем имеющимся компонентам компьютера: материнской плате, процессору, HDD и SSD дискам, видеоадаптеру, дисководу.</string>
    <string name="casecomp">
        Все те основные компоненты, которые я перечислил выше, должны быть где-то расположены, а не просто валяться на полу, верно? :) Все компоненты компьютера помещаются в специальный корпус (системный блок) для того чтобы исключить на них внешнее воздействие, защитить от повреждений и поддерживать внутри корпуса нужную температуру за счёт имеющихся в нём вентиляторов. Также запускаете вы свой компьютер именно при помощи кнопки на корпусе, поэтому без корпуса никак не обойтись :)
        Корпуса бывают разного размера и в самый маленький корпус, понятное дело, не поместится, например, стандартная материнская плата. Поэтому основной характеристикой корпуса является формфактор поддерживаемых материнских плат. Если Самые большие корпуса (Full Tower) способны вместить в себя платы любого размера и любые компоненты так, что ещё и будет более-менее свободно и в случае необходимости вынуть какой-либо из компонентов, не возникнет неудобств.</string>
    <string name="monitor">
        Также, уже вне корпуса, будет расположено ещё одно важное устройство – монитор. Монтитор подключается проводом к материнской плате и без него вы, соответственно, не увидите всего что делаете на компьютере. Основными параметрами монитора являются:
        - Диагональ экрана в дюймах;
        - Поддерживаемое разрешение экрана, например, 1920×1080. Чем оно больше, тем лучше;
        - Угол обзора. Влияет на то, как будет видно изображение если смотреть на монитор со стороны или чуть выше / ниже. Чем больше угол обзора, тем лучше.
        - Яркость и контрастность. Яркость измеряется в кд/м2 и в хороших моделях лежит за пределами 300, а контрастность должна быть не менее 1:1000 для хорошего отображения.</string>
</resources>